<resources>
    <string name="app_name">LOVE START</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_check_update">Detects That A New Version,Click The Update</string>
    <string name="SD_NOTFIND">The SD Card Does Not Exist</string>
    <string name="net_wrong">Network Connection Exception</string>
    <string name="image_description">Image</string>
    <string name="Note">Prompt</string>
    <string name="Choose_car">Please Select A Vehicle</string>
    <string name="Back">Back</string>
    <string name="Save">Save</string>
    <string name="Add">Add</string>
    <string name="Sure">Sure</string>
    <string name="cancle">Cancle</string>
    <string name="verification">Verification</string>
	<string name="not_complete_not">Please Enter Complete Information</string>
	<string name="get_data">In Data Read</string>
	<string name="save_data">Data Preservation</string>
	<string name="save_ok">Data Save Successfully</string>
    <string name="password_again_error">Two Passwords Are Not a Same</string>
    <string name="account">Account</string>
    <string name="account_hit">Enter The Account</string>
	<string name="password">Password</string>
	<string name="password_hit">Enter The Password</string>
	<string name="login">Login</string>
	<string name="register">Register</string>
	<string name="remind_pwd">Remember Me</string>
	<string name="login_error">Account And Password Does Not Match</string>
	<string name="login_note">In Login</string>
	<string name="register_title">User Registration</string>
	<string name="register_account">UserName</string>
	<string name="register_account_hint">Enter The UserName</string>
	<string name="register_password">Password</string>
	<string name="register_password_hint">Enter The Password</string>
	<string name="register_password_again">Check The Password</string>
	<string name="register_password_again_hint">Ehter The Password Again</string>
	<string name="register_person">Contact People</string>
	<string name="register_person_hint">Enter The Contact People Name</string>
	<string name="register_mail">Email</string>
	<string name="register_mail_hint">Enter The Email</string>
	<string name="register_phone">Tel</string>
	<string name="register_phone_hint">Enter The Tel</string>
	<string name="account_used">Account Has Been Uesd,Try Again</string>
	<string name="registering">In Registration,Plase Wait...</string>
	<string name="register_ok">Successful Registration</string>
	<string name="Traffic">Map</string>
    <string name="Satellite">Satellite</string>
    <string name="search_hit">Enter The License Plate Number</string>
    <string name="Get_car_data">Retrieving Vehicle Data</string>
    <string name="car_speed">Speed</string>
    <string name="car_mileage">Mileage</string>
    <string name="car_Direction">Direction</string>
    <string name="accon">Start</string>
    <string-array name="alarm">
   		<item>Cut The Wire Alarm</item>
   		<item>GPS Unavailable Alarm</item>
   		<item>Speeding Alarm</item>
   		<item>Low Voltage Alarm</item>
   		<item>Overtime Parking Alarm</item>
   		<item>Sensor 1 On</item>
   		<item>Sensor 2 On</item>
   		<item>Sensor 3 On</item>
   		<item>Car Lock Status</item>
   	</string-array>
   	<string-array name="phone_list">
   	    <item>Modify Tel</item>
   	    <item>Delete Tel</item>
   	</string-array>
   	<string name="delete_phone">Are you sure to delete the contact details?</string>
   	<string name="open">Unlock</string>
   	<string name="lock">Locked</string>
   	<string name="contor">Guard Against</string>
   	<string name="un_contor">Remove Guard Against</string>
   	<string name="one_Diagnosis">Open The Trunk</string>
   	<string name="one_call">A Key For Call</string>
   	<string name="one_location">Share My Location</string>
   	<string name="enter_phone">Commit Vehicle Position</string>
   	<string name="enter_phone_hit">Enter Other Side Tel</string>
   	<string name="no_car_location">Vehicle Location Can Not Be Found</string>
   	<string name="no_call_phone">A Key For Call Can Not Be Set</string>
   	<string name="app_no">Function Temporarily Not Opened</string>
   	<string name="choose_phone">Chick And Call</string>
   	<string name="send_sms">Message Has Been Send</string>
   	<string name="add_p20">Install P20-Suite Implements</string>
   	<string name="car_offine">Device Offline</string>
   	<string name="DISARMING">Remove Guard Against</string>
   	<string name="ARMING">Guard Against</string>
   	<string name="LOCK">Lock Car</string>
   	<string name="UNLOCK">Unlock</string>
   	<string name="STARTENGINE">Remote Start</string>
   	<string name="STARTENGINE_false">Remote Flameout</string>
   	<string name="start_engine">Are You Sure Remote Start?</string>
   	<string name="stop_engine">Are You Sure Remote Flameout?</string>
   	<string name="SEND_SOUND_false">Determine the setting silent mode</string>
   	<string name="SEND_SOUND">Are You Sure Set The Acousto-Optic Mode</string>
   	<string name="FINDVEHICLE">Find Car</string>
   	<string name="SOUND">Acousto-Optic</string>
   	<string name="SOUND_false">Mute</string>
   	<string name="net_wrong_send_sms">Network Exception,Whether To Use SMS Commands?</string>
   	<string name="car_offline_send_sms">Vehicle offline,Whether To Use SMS Commands?</string>
    <string name="more">More</string>
    <string name="sms">Message Reminding</string>
    <string name="car_info">Vehicle Manager</string>
    <string name="person_info">My Account</string>
    <string name="feedBack">Proposal Feedback</string>
    <string name="about_us">About Us</string>
    <string name="sms_title">The Message List</string>
    <string name="add_car">New Vehicle</string>
    <string name="delete_car">Deltet Vehicle</string>
    <string name="delete_car_sure">Are You Sure Delete This Vehicle？</string>
    <string name="delete_car_now">The Vehicle In The Delete</string>
    <string name="car_name">License Plate</string>
    <string name="yearcheck">Yearly Check To Remind</string>
    <string name="yearcheck_time">Yearly Check Due Date</string>
    <string name="insurance">Insurance Remind</string>
    <string name="insurance_time">Insurance Due Date</string>
    <string name="reset">The Mileage For Driving </string>
    <string name="mileage">Maintenance To Remind</string>
    <string name="maintenance">Maintenance Mileage</string>
    <string name="terminal_info">Terminal Information</string>
    <string name="terminal_enclosure">The Attachment Information</string>
    <string name="terminal_lixian">Offline Alarm</string>
    <string name="terminal_sensitivity">Repair Mode</string>
    <string name="call_phones">A Key For Call</string>
    <string name="call_phones_set">Set A Key For Call</string>
    <string name="call_name">Name</string>
    <string name="call_name_hint">Enter The Tel Logo</string>
    <string name="call_phone">Tel</string>
    <string name="call_phone_hint">Enter The Contact People Tel</string>
    <string name="autolock">AUTOLOCK</string>
    <string name="bluetooth">PKE Manage</string>
    <string name="blue">PKE Component</string>
    <string name="add_phone">Insert</string>
    <string name="delete_phone_bluetooth">Delete Tel</string>
    <string name="deputy">Deputy Tel</string>
    <string name="set_up">Setting</string>
    <string name="enter_deputy_phone">Enter The Deputy Tel</string>
    <string name="service_end">Service Maturity</string>
    <string name="Brand">Vehicle Brand</string>
    <string name="is_add_gps">Install GPS Host</string>
    <string name="Barcode">The Barcode For Terminal</string>
    <string name="SIM">The SIM Number For Terminal</string>
    <string name="next_maintenance">The Next Maintenance Mileage</string>
    <string name="not_Barcode">Terminal Barcode Does Not Exist, Please Input After Verification</string>
    <string name="not_annual_inspect">Enter Annual Inspection Time</string>
    <string name="not_insurance">Enter Insurance Time</string>
    <string name="not_mileage">Enter Maintenance Mile</string>
    <string name="not_car_id">Enter License Plate</string>
    <string name="not_gpsinfo">Enter The Complete GPS Information</string>
    <string name="gps_registered">Terminal Has Been Registered, Please Enter Again</string>
    <string name="person_sup">The Higher The User</string>
    <string name="person_name">UserName</string>
    <string name="person_phone">Contact Tel</string>
    <string name="person_yearcheck">Driving a Yearly Check To Remind</string>
    <string name="person_time">The Annual Inspection Date</string>
    <string name="person_pwd">Modify Password</string>
    <string name="person_pwd_hit">Enter The Password</string>
    <string name="person_pwd_again">Repeat The Password</string>
    <string name="person_pwd_again_hit">Enter The Password Again</string>
    <string name="person_binding">Binding Mobile Phone</string>
    <string name="xlistview_header_hint_normal">Drop Down Refresh</string>
    <string name="xlistview_header_hint_ready">Loosen And Refresh Data</string>
    <string name="xlistview_header_hint_loading">In The Load...</string>
    <string name="xlistview_header_last_time">Last Update Time：</string>
    <string name="xlistview_footer_hint_normal">Look More</string>
    <string name="xlistview_footer_hint_ready">Loosen And Add In More</string>
    <string name="net_set_prompt">Set Network Prompt</string>
    <string name="net_set_content">The network connection is unavailable, please check the network Settings, also can enter the SMS operation mode.</string>
    <string name="set_net">Network Setting</string>
    <string name="SMS_operation">SMS Operation</string>
    <string name="account_binding">This Account Has Been Bound To Other Mobile Phones</string>
    <string name="version">Version</string>
     <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="input_data">Enter The Date</string>
    <string name="p_m">Pairing mode,Close the connection</string>
    <string name="connection_seccess">Connection Successful</string>
    <string name="Connection_broken">Connection Broken</string>
    <string name="sure_delete">Sure to delete?</string>
    <string name="wait_connection">In Connection,Wait...</string>
    <string name="save_data_fail">Data save failed</string>
    <string name="close_repair_mode">Close The Repair Mode</string>
    <string name="open_repair_mode">Open The Repair Mode</string>
    <string name="Fuel_consumption_sensor">Fuel consumption sensor</string>
    <string name="ODB_attachment">ODB Attachment</string>
    <string name="remote_start">Remote Started The Attachment</string>
	<string name="remote_start_PKE">Remote Started The Attachment Whit PKE</string>
	<string name="The_Box_For_Prevent_Disassembly">The Box Is To Prevent Removal</string>
	<string name="clear">Clear</string>
	<string name="clear_Deputy">Whether To Clear Deputy Tel?</string>
	<string name="set_shock_success">Set The Shock Sensitivity Of Success</string>
	<string name="set_shock_failed">Set The Shock Sensitivity Of Failed</string>
	<string name="Command_prompt">Command prompt</string>
	<string name="open_AUTOLOCK_success">Open AUTOLOCK Success</string>
	<string name="open_AUTOLOCK_failed">Open AUTOLOCK Failed</string>
	<string name="close_AUTOLOCK_success">Close AUTOLOCK Success</string>
	<string name="close_AUTOLOCK_failed">Close AUTOLOCK Failed</string>
	<string name="enter_complete">Enter Complete</string>
	<string name="feedBack_failed">Proposal Feedback Failed</string>
</resources>