<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:id="@+id/rl_topmenu"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_top"
        android:padding="2dp">
		<Button
            android:id="@+id/bt_register_back"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Back"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/bt_menu_bg"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/bt_register_save"
            android:layout_toRightOf="@+id/bt_register_back"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
		<Button
            android:id="@+id/bt_register_save"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/Save"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/bt_menu_bg"/>
	</RelativeLayout>
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/register_account"/>
		    <EditText 
		        android:id="@+id/et_register_account"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/register_account_hint"/>
		    <TextView 
		        android:id="@+id/tv_isaccount_use"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:textColor="#FF0000"
		        android:text="@string/account_used"/>
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/register_password"/>
		    <EditText 
		        android:id="@+id/et_register_password"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword"
		        android:hint="@string/register_password_hint"/>
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/register_password_again"/>
		    <EditText 
		        android:id="@+id/et_register_password_again"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword"
		        android:hint="@string/register_password_again_hint"/>
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/register_person"/>
		    <EditText 
		        android:id="@+id/et_register_person"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/register_person_hint"/>
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/register_mail"/>
		    <EditText 
		        android:id="@+id/et_register_mail"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textEmailAddress"
		        android:hint="@string/register_mail_hint"/>
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:text="@string/register_phone"/>
		    <EditText 
		        android:id="@+id/et_register_phone"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="phone"
		        android:hint="@string/register_phone_hint"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>