<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:text="@string/call_name"/>
    <EditText 
        android:id="@+id/et_add_phone_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/call_name_hint"/>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:text="@string/call_phone"/>
    <EditText 
        android:id="@+id/et_add_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/call_phone_hint"/>
</LinearLayout>
