<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_top"
        android:padding="2dp">
		<Button
            android:id="@+id/bt_person_back"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Back"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/bt_menu_bg"/>
        <TextView
            android:id="@+id/tv_toptitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/bt_person_save"
            android:layout_toRightOf="@+id/bt_person_back"
            android:gravity="center"
            android:text="@string/person_info"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
		<Button
            android:id="@+id/bt_person_save"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/Save"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/bt_menu_bg"/>
	</RelativeLayout>
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:stretchColumns="1">
		    <TableRow android:id="@+id/tr_user_name"> 
		        <TextView 
		            android:id="@+id/tv_urser_name"
		            android:text="@string/person_name" 
		            android:gravity="right"
		            android:textColor="@color/tv_color"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"/> 
		        <EditText 
				    android:id="@+id/et_user_name"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
			        android:textSize="14sp"
			        android:textColor="#000000"
			        android:inputType="text"
				    android:background="@drawable/et_bg"/> 
		    </TableRow>
		    <TableRow android:id="@+id/tr_user_phone"> 
		        <TextView 
		            android:text="@string/person_phone" 
		            android:gravity="right"
		            android:textColor="@color/tv_color"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"/> 
		        <EditText 
				    android:id="@+id/et_person_name"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
			        android:textSize="14sp"
			        android:textColor="#000000"
			        android:inputType="text"
				    android:background="@drawable/et_bg"/> 
		    </TableRow>
		    <TableRow android:id="@+id/tr_user_yearcheck"> 
		        <TextView 
		            android:text="@string/person_yearcheck" 
		            android:textColor="@color/tv_color"
		            android:layout_gravity="center_vertical"
		            android:gravity="right"
		            android:ems="3"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"/> 
			    <CheckBox 
		            android:id="@+id/cb_person_yearcheck"
		            android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"/>
		    </TableRow>
		    <TableRow android:id="@+id/tr_person_info_time"> 
		        <TextView 
		            android:text="@string/person_time" 
		            android:gravity="right|center"
		            android:layout_height="fill_parent"
		            android:textColor="@color/tv_color"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"/> 
		        <RelativeLayout 
		            android:layout_width="fill_parent"
		            android:layout_height="40dp">
			        <ImageView 
			            android:id="@+id/iv_rep_person_time"
			            android:layout_width="40dp"
			            android:layout_height="40dp"
			            android:layout_alignParentRight="true"
			            android:contentDescription="@string/image_description"
			            android:src="@drawable/time"/>    
			        <EditText 
			            android:id="@+id/et_person_yearcheck"
			            android:enabled="false"
			            android:background="@drawable/et_bg"
			            android:layout_width="fill_parent"
			            android:layout_height="40dp"
			            android:textSize="14sp"
			            android:textColor="#000000"
			            android:inputType="text"
			            android:layout_toLeftOf="@+id/iv_rep_person_time"/>
			    </RelativeLayout>
		    </TableRow>
		    <TableRow> 
		        <TextView 
		            android:text="@string/person_pwd" 
		            android:gravity="right"
		            android:textColor="@color/tv_color"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"/> 
		        <EditText 
				    android:id="@+id/et_pwd"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
			        android:textSize="14sp"
			        android:textColor="#000000"
			        android:hint="@string/person_pwd_hit"
				    android:background="@drawable/et_bg"/> 
		    </TableRow>
		    <TableRow> 
		        <TextView 
		            android:text="@string/person_pwd_again" 
		            android:gravity="right"
		            android:textColor="@color/tv_color"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"/> 
		        <EditText 
				    android:id="@+id/et_pwd_agian"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
			        android:textSize="14sp"
			        android:textColor="#000000"
			        android:hint="@string/person_pwd_again_hit"
				    android:background="@drawable/et_bg"/> 
		    </TableRow>
		    <TableRow> 
		        <TextView 
		            android:text="@string/person_binding" 
		            android:gravity="right"
		            android:textColor="@color/tv_color"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"/> 
		        <CheckBox 
		            android:id="@+id/cb_person_binding"
		            android:layout_width="wrap_content"
	              	android:layout_height="wrap_content"/> 
		    </TableRow>
	  	</TableLayout>  
    </ScrollView>
</LinearLayout>