<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2" >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image_description"
            android:src="@drawable/logo" />
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:orientation="vertical"
	        android:background="@drawable/round_bg">
	        <EditText
	            android:id="@+id/et_account" 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:layout_marginBottom="10dp"
	            android:paddingLeft="10dp"
	            android:textColor="#000000"
	            android:textSize="18sp"
	            android:hint="@string/account_hit"
	            android:background="@android:color/transparent"/>
			<TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="#e5e5e5"/>
	        <EditText
	            android:id="@+id/et_password" 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:layout_marginBottom="10dp"
	            android:paddingLeft="10dp"
	            android:textColor="#000000"
	            android:textSize="18sp"
	            android:hint="@string/password_hit"
	            android:inputType="textPassword"
	            android:background="@android:color/transparent"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:orientation="horizontal"
		    android:layout_marginTop="12dp">
	        <Button 
		        android:id="@+id/bt_login"
		        android:layout_gravity="center_horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:layout_weight="1"
		        android:background="@drawable/bt_background"
		        android:textColor="#000000"
		        android:textSize="18sp"
		        android:text="@string/login"/>
	        <Button 
		        android:id="@+id/bt_register"
		        android:layout_gravity="center_horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:layout_weight="1"
		        android:background="@drawable/bt_background"
		        android:textColor="#000000"
		        android:textSize="18sp"
		        android:visibility="gone"
		        android:text="@string/register"/>
	    </LinearLayout>
		<CheckBox 
			android:id="@+id/cb_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="35dp"
			android:checked="true"
			android:text="@string/remind_pwd"
			android:button="@drawable/selector_checkbox"
			android:textColor="#FFFFFF"/>
		<TextView 
		    android:id="@+id/tv_update"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:textColor="#FF0000"
		    android:layout_marginTop="15dp"
		    android:textSize="18sp"
		    android:visibility="gone"
		    android:text="@string/tv_check_update"/>
	</LinearLayout>
</LinearLayout>