<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:id="@+id/rl_topmenu"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_top"
        android:padding="2dp">
		<Button
            android:id="@+id/bt_phone_back"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Back"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/bt_menu_bg"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/bt_phone_save"
            android:layout_toRightOf="@+id/bt_phone_back"
            android:gravity="center"
            android:text="@string/call_phones"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
		<Button
            android:id="@+id/bt_phone_save"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/Add"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/bt_menu_bg"/>
	</RelativeLayout>
	<ListView 
	    android:id="@+id/lv_phone"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:cacheColorHint="#00000000"></ListView>
</LinearLayout>