<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    <RelativeLayout
        android:id="@+id/rl_topmenu"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_top"
        android:padding="2dp">
		<Button
            android:id="@+id/bt_sms_back"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Back"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/bt_menu_bg"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/bt_sms_save"
            android:layout_toRightOf="@+id/bt_sms_back"
            android:gravity="center"
            android:text="@string/sms_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
		<Button
            android:id="@+id/bt_sms_save"
            android:layout_width="60dp"
	        android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:text="@string/Save"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/bt_menu_bg"/>
	</RelativeLayout>
	<com.wise.list.XListView
        android:id="@+id/lv_sms"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:cacheColorHint="#00000000">
    </com.wise.list.XListView>
</LinearLayout>